macro/derive/tests/from_variant/04-container-from.stderr
error[E0119]: conflicting implementations of trait `std::convert::From<Variant1>` for type `Enum`
  --> $DIR/03-container-enums.rs:16:10
   |
16 | #[derive(iroha_derive::FromVariant)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Enum`
   |
  ::: $WORKSPACE/macro/derive/tests/from_variant/04-container-from.rs
   |
   | impl std::convert::From<Variant1> for Enum {
   | ------------------------------------------ first implementation here
   |
   = note: this error originates in the derive macro `iroha_derive::FromVariant` (in Nightly builds, run with -Z macro-backtrace for more info)
